--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="col-md-6 formulario">
           <form class="reservacion needs-validation" id="formReserva" novalidate>
             <div class="mb-4">
-              <h2 class="text-center">Reservaciones</h2>
+              <h2 class="text-center">Reservas</h2>
             </div>
 
             <div class="mb-3 input-group">
